[package]
name = "ytm-radio-helper"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "External YouTube Music account helper for ytm-radio"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
